--- a/hocWeb/.env
+++ b/hocWeb/.env
@@ -1,5 +1,5 @@
 APP_ENV=local
-APP_KEY=base64:9l69pROpQEWXTnyZrCNkf2Yt3p+uKmBD4CCodpv6+24=
+APP_KEY=base64:avwSdVkVQiSTSYwzcaM7CR6bdIDQNwMecPiyh5u01EI=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
@@ -7,9 +7,9 @@ APP_URL=http://localhost
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=laravel
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
